@@ -3,3 +3,5 @@ Use the `<=` operator to define a version that is less than or equal to a specif
 Use `(start...end)` to create a range from start to end that excludes the last element.
 
 Use an `<!-- XML comment -->` to disable or hide markup.
+
+In AsciiDoc, `{name}` is the syntax for an attribute reference.
