@@ -1,0 +1,1 @@
+The processor will interpolate #{variables} in the text.
