@@ -14,6 +14,8 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 * add support for unconstrained formatting (em, strong, and codespan) (#6)
 * escape all replaceable text (arrows and ellipses) when converting regular text
 * replace double plus in codespan with \{pp} attribute reference
+* escape attribute references in regular text
+* use passthrough for codespan if text contains an attribute reference
 
 === Changed
 
